# BA-AD-Core

./: .gitignore  Cargo.toml  Uniffi.toml  build.rs
.github/workflows/: build.yml
.idx/: dev.nix
examples/: basic_logging.rs  error_test.rs
src/: async_writer.rs  baad_core.udl  bindings.rs  config.rs  error.rs  errors.rs  file.rs  formatter.rs  lib.rs  utils.rs
