[package]
name = "baad-core"
version = "2.4.1"
edition = "2024"

[[bin]]
name = "bindgen"
path = "bindgen.rs"

[lib]
crate-type = ["cdylib", "rlib"]
name = "baad_core"
path = "src/lib.rs"

[features]
default = []
no_logs = []
no_debug = []
no_error = []

[dependencies]
eyre = "0.6"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
owo-colors = "4.2.2"
chrono = { version = "0.4", features = ["serde"] }
lazy-regex = "3.3"
once_cell = "1.19"
smallvec = "1.13"
thiserror = "2.0"
tokio = { version = "1.47.0", features = ["full"] }
platform-dirs = "0.3.0"
anyhow = "1.0.99"
uniffi = { version = "0.29.3", features = ["cli"] }

[build-dependencies]
uniffi = { version = "0.29.3", features = [ "build" ] }
